--- a/App.config
+++ b/App.config
@@ -27,18 +27,16 @@
         <value>
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>일반</string>
+            <string>공통</string>
             <string>건축</string>
-            <string>구조</string>
+            <string>기계</string>
             <string>토목</string>
             <string>조경</string>
-            <string>기계</string>
-            <string>UT/환경</string>
-            <string>소방기계</string>
             <string>전기</string>
             <string>통신</string>
-            <string>소방전기</string>
             <string>기타</string>
+            <string>소방</string>
+            <string>관급자재</string>
           </ArrayOfString>
         </value>
       </setting>
@@ -46,10 +44,10 @@
         <value>
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>승인</string>
-            <string>조건부승인</string>
-            <string>반려</string>
-            <string>정보용</string>
+            <string>승인용</string>
+            <string>공사용</string>
+            <string>최종용</string>
+            <string>참고용</string>
           </ArrayOfString>
         </value>
       </setting>
@@ -57,118 +55,40 @@
         <value>
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>PMIS 자료분류</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공정 &gt; 공정승인 첨부서류</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공정 &gt; 공정승인 첨부서류 &gt; 개산급 관리대장</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공정 &gt; 공정승인 첨부서류 &gt; 건축 - 공정승인 첨부서류</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공정 &gt; 공정승인 첨부서류 &gt; 기계 - 공정승인 첨부서류</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공정 &gt; 공정승인 첨부서류 &gt; 소방기계 - 공정승인 첨부서류</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공정 &gt; 공정승인 첨부서류 &gt; 소방전기 - 공정승인 첨부서류</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공정 &gt; 공정승인 첨부서류 &gt; 전기 - 공정승인 첨부서류</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공정 &gt; 공정승인 첨부서류 &gt; 통신 - 공정승인 첨부서류</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공정 &gt; 보고서 &gt; 공정현황보고</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공정 &gt; 보고서 &gt; 공정현황보고 &gt; 월간공정보고</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공정 &gt; 보고서 &gt; 공정현황보고 &gt; 주간공정보고</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Online 문서관리 &gt; 서신문서 &gt; 공문</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Online 문서관리 &gt; 서신문서 &gt; 공문 &gt; 공조장비설치공사</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Online 문서관리 &gt; 서신문서 &gt; 공문 &gt; 시험</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Online 문서관리 &gt; 서신문서 &gt; 공문 &gt; 에어컨 설치공사</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Online 문서관리 &gt; 서신문서 &gt; 기타 (E-Mail 등)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Online 문서관리 &gt; 서신문서 &gt; 부적합 사항 보고서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Online 문서관리 &gt; 서신문서 &gt; 부적합 사항 보고서 &gt; 부적합 사항 조치결과</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Online 문서관리 &gt; 서신문서 &gt; 부적합 사항 보고서 &gt; 부적합 사항 최종확인</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Online 문서관리 &gt; 서신문서 &gt; 안전 부적합 사항 보고서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Online 문서관리 &gt; 서신문서 &gt; 안전 부적합 사항 보고서 &gt; 안전 부적합 사항 조치결과</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Online 문서관리 &gt; 서신문서 &gt; 안전 부적합 사항 보고서 &gt; 안전 부적합 사항 최종확인</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Online 문서관리 &gt; 서신문서 &gt; 작업지시서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Online 문서관리 &gt; 서신문서 &gt; 회의록</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Online 문서관리 &gt; 시공문서 &gt; 검측요청서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Online 문서관리 &gt; 시공문서 &gt; 결함 통보서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Online 문서관리 &gt; 시공문서 &gt; 안전 시정 지시서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Transmittal (계약업체)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; Transmittal (시공사)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; 문서 발신 (지시서)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; 문서 발신 (지시서) &gt; 지시서 - 발신</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; 문서 발신 (회의록) &gt; 회의록 - 발신</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; 보고서 &gt; 기타보고서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; 인허가</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; 인허가 &gt; 기타 - 인허가</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 공통 &gt; 인허가 &gt; 착공계서류</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; MP단계 &gt; 보고서 - MP단계</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; Shop Dwg (시공사)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; Shop Dwg (시공사) &gt; 도면 - Shop Dwg (시공사)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; Shop Dwg (시공사) &gt; 도면 - Shop Dwg (시공사) &gt; 기계 - Shop Dwg (시공사)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 계약도면(입찰도면)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 계약도면(입찰도면) &gt; 계산서 - 계약도면(입찰도면)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 계약도면(입찰도면) &gt; 도면 - 계약도면(입찰도면)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 계약도면(입찰도면) &gt; 시방서 - 계약도면(입찰도면)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 계획설계 &gt; 보고서 - 계획설계</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 기본설계 &gt; 보고서 - 기본설계</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 설계변경도면/도서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 설계변경도면/도서 &gt; 도면 - 설계변경도면/도서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 설계변경도면/도서 &gt; 도면 - 설계변경도면/도서 &gt; 건축 - 설계변경도면/도서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 설계변경도면/도서 &gt; 도면 - 설계변경도면/도서 &gt; 인테리어-설계변경도면/도서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 설계변경도면/도서 &gt; 도면 - 설계변경도면/도서 &gt; 전기 - 설계변경도면/도서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 설계변경도면/도서 &gt; 도면 - 설계변경도면/도서 &gt; 조경 - 설계변경도면/도서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 설계변경도면/도서 &gt; 입주사요청사항</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 실시설계</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 실시설계 &gt; 계산서 - 실시설계</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 실시설계 &gt; 도면 - 실시설계</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 실시설계 &gt; 시방서 - 실시설계</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 인테리어단계 &gt; 기본/기획설계</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 설계 &gt; 인테리어단계 &gt; 실시설계</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 안전/환경 &gt; 계획 &gt; 안전관리계획서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 안전/환경 &gt; 기타 &gt; 안전점검일지</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 안전/환경 &gt; 기타 &gt; 위험성평가</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 안전/환경 &gt; 보고서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 안전/환경 &gt; 보고서 &gt; 사고 보고서(산재)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 안전/환경 &gt; 안전 부적합사항 &gt; 안전 부적합 사항 보고서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 품질 &gt; 계획 &gt; 공종별 검사 계획서(ITP&amp;ITC)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 품질 &gt; 계획 &gt; 품질 관리 계획서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 품질 &gt; 부적합사항 &gt; 부적합 사항 보고서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 품질 &gt; 시공계획서(KOM) &gt; 시공계획서</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 품질 &gt; 시공계획서(PCM)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 품질 &gt; 시공계획서(PCM) &gt; 건축 - 시공계획서(PCM)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 품질 &gt; 시공계획서(PCM) &gt; 기계 - 시공계획서(PCM)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 품질 &gt; 시공계획서(PCM) &gt; 소방기계 - 시공계획서(PCM)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 품질 &gt; 시공계획서(PCM) &gt; 소방전기 - 시공계획서(PCM)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 품질 &gt; 시공계획서(PCM) &gt; 전기 - 시공계획서(PCM)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 품질 &gt; 시공계획서(PCM) &gt; 조경 - 시공계획서(PCM)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 품질 &gt; 자재/장비 공급승인서 (DP2)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 품질 &gt; 자재/장비 공급승인서 (DP2) &gt; 건축 - 자재/장비 공급승인서 (DP2)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 품질 &gt; 자재/장비 공급승인서 (DP2) &gt; 기계 - 자재/장비 공급승인서 (DP2)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 품질 &gt; 자재/장비 공급승인서 (DP2) &gt; 전기 - 자재/장비 공급승인서 (DP2)</string>
-            <string>PMIS 자료분류 &gt; 문서분류체계 &gt; 품질 &gt; 자재/장비 공급승인서 (DP2) &gt; 조경 - 자재/장비 공급승인서 (DP2)</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 시공관리</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 시공관리 &gt; 감리업무관리 &gt; 감리업무일지 &gt; 배관공사</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 시공관리 &gt; 감리업무관리 &gt; 감리업무일지 &gt; 배선공사</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 시공관리 &gt; 감리업무관리 &gt; 감리업무일지 &gt; 분야별감리업무일지</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 시공관리 &gt; 감리업무관리 &gt; 감리업무일지 &gt; 시험</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 시공관리 &gt; 감리업무관리 &gt; 감리업무일지 &gt; 책임감리업무일지</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 시공관리 &gt; 감리업무관리 &gt; 감리월간보고</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 시공관리 &gt; 시공보고관리 &gt; 월간업무보고</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 시공관리 &gt; 시공보고관리 &gt; 작업일보</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 시공관리 &gt; 시공보고관리 &gt; 주간업무보고</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 시공관리 &gt; 시공보고관리 &gt; 주간업무보고 &gt; 배관공사</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 시공관리 &gt; 입주사협의 &gt; 회의자료</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 전자도서관리 &gt; 사업일반 &gt; 사업계획</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 품질/안전/ 환경관리 &gt; 품질관리 &gt; 자재검수요청서</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 품질/안전/ 환경관리 &gt; 품질관리 &gt; 자재검수요청서 &gt; 건축 - 자재검수요청서</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 품질/안전/ 환경관리 &gt; 품질관리 &gt; 자재검수요청서 &gt; 기계 - 자재검수요청서</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 품질/안전/ 환경관리 &gt; 품질관리 &gt; 자재검수요청서 &gt; 전기 - 자재검수요청서</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 품질/안전/ 환경관리 &gt; 품질관리 &gt; 자재검수요청서 &gt; 조경 - 자재검수요청서</string>
-            <string>PMIS 자료분류 &gt; 시공자료분류 &gt; 품질/안전/ 환경관리 &gt; 품질관리 &gt; 현장통합점검일지</string>
-            <string>보안문서분류체계 &gt; 보고서</string>
-            <string>보안문서분류체계 &gt; 보고서 &gt; 입주사 월간보고서</string>
-            <string>보안문서분류체계 &gt; 원가</string>
-            <string>보안문서분류체계 &gt; 원가 &gt; 기성 &gt; 공사기성부분 검사원</string>
-            <string>보안문서분류체계 &gt; 원가 &gt; 기성 &gt; 공사비 - 기성</string>
-            <string>보안문서분류체계 &gt; 원가 &gt; 기성 &gt; 용역비 - 기성</string>
-            <string>보안문서분류체계 &gt; 원가 &gt; 변경/정산 &gt; 공사비 - 변경/정산</string>
-            <string>보안문서분류체계 &gt; 원가 &gt; 변경/정산 &gt; 기타 - 변경/정산</string>
-            <string>보안문서분류체계 &gt; 정보보안 &gt; 인원보안지침 &gt; 비밀유지 서약서(외부업체 및 대표자)</string>
+            <string>공문서 &gt; 문서송부전</string>
+            <string>문서 및 도면 &gt; co-operation &gt; 공문서관리 &gt; CM-설계 &gt; CM</string>
+            <string>문서 및 도면 &gt; co-operation &gt; 공문서관리 &gt; CM-시공 &gt; CM</string>
+            <string>문서 및 도면 &gt; co-operation &gt; 공문서관리 &gt; CM-시공 &gt; 시공</string>
+            <string>문서 및 도면 &gt; co-operation &gt; 공문서관리 &gt; 가설공사</string>
+            <string>문서 및 도면 &gt; co-operation &gt; 공문서관리 &gt; 발주처-CM &gt; CM</string>
+            <string>문서 및 도면 &gt; co-operation &gt; 공문서관리 &gt; 발주처-CM &gt; 가설건물공사</string>
+            <string>문서 및 도면 &gt; co-operation &gt; 공문서관리 &gt; 발주처-CM &gt; 발주처</string>
+            <string>문서 및 도면 &gt; co-operation &gt; 공문서관리 &gt; 발주처-CM &gt; 전력비</string>
+            <string>문서 및 도면 &gt; co-operation &gt; 공문서관리 &gt; 발주처-CM &gt; 준공도서작성비</string>
+            <string>문서 및 도면 &gt; co-operation &gt; 공문서관리 &gt; 발주처-CM &gt; 지급자재현장관리비</string>
+            <string>문서 및 도면 &gt; co-operation &gt; 회의자료</string>
+            <string>문서 및 도면 &gt; 사업비/계약 &gt; 기성자료실</string>
+            <string>문서 및 도면 &gt; 설계관리 &gt; VE자료실</string>
+            <string>문서 및 도면 &gt; 설계관리 &gt; 도면 &gt; 기본도면/도서</string>
+            <string>문서 및 도면 &gt; 설계관리 &gt; 도면 &gt; 시공도면/도서</string>
+            <string>문서 및 도면 &gt; 설계관리 &gt; 설계보고 &gt; 설계단계 CM 월간보고</string>
+            <string>문서 및 도면 &gt; 설계관리 &gt; 설계보고 &gt; 설계단계 CM 일일보고</string>
+            <string>문서 및 도면 &gt; 설계관리 &gt; 설계보고 &gt; 설계단계 CM 주간보고</string>
+            <string>문서 및 도면 &gt; 시공관리 &gt; 감리/CM일지</string>
+            <string>문서 및 도면 &gt; 시공관리 &gt; 감리월간보고</string>
+            <string>문서 및 도면 &gt; 시공관리 &gt; 감리주간보고</string>
+            <string>문서 및 도면 &gt; 시공관리 &gt; 시공월간보고</string>
+            <string>문서 및 도면 &gt; 시공관리 &gt; 시공일일보고</string>
+            <string>문서 및 도면 &gt; 품질/안전/환경 &gt; Material Inspection &gt; 검수요청서</string>
+            <string>문서 및 도면 &gt; 품질/안전/환경 &gt; Material Inspection &gt; 검측요청서</string>
+            <string>문서 및 도면 &gt; 품질/안전/환경 &gt; 안전관리 &gt; 안전 관리 계획</string>
+            <string>문서 및 도면 &gt; 품질/안전/환경 &gt; 안전관리 &gt; 안전자료실</string>
+            <string>문서 및 도면 &gt; 품질/안전/환경 &gt; 품질관리 &gt; 품질관리계획</string>
+            <string>문서 및 도면 &gt; 품질/안전/환경 &gt; 품질관리 &gt; 품질자료실</string>
+            <string>문서 및 도면 &gt; 품질/안전/환경 &gt; 환경관리 &gt; 콘텐츠 관리 계약 문서</string>
+            <string>문서 및 도면 &gt; 품질/안전/환경 &gt; 환경관리 &gt; 폐기물 관리</string>
+            <string>문서 및 도면 &gt; 품질/안전/환경 &gt; 환경관리 &gt; 환경 관리 계획</string>
+            <string>문서 및 도면 &gt; 품질/안전/환경 &gt; 환경관리 &gt; 환경자료실</string>
           </ArrayOfString>
         </value>
       </setting>
