--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -14,144 +14,64 @@
     <Setting Name="register_discipline" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;string&gt;일반&lt;/string&gt;
+  &lt;string&gt;공통&lt;/string&gt;
   &lt;string&gt;건축&lt;/string&gt;
-  &lt;string&gt;구조&lt;/string&gt;
+  &lt;string&gt;기계&lt;/string&gt;
   &lt;string&gt;토목&lt;/string&gt;
   &lt;string&gt;조경&lt;/string&gt;
-  &lt;string&gt;기계&lt;/string&gt;
-  &lt;string&gt;UT/환경&lt;/string&gt;
-  &lt;string&gt;소방기계&lt;/string&gt;
   &lt;string&gt;전기&lt;/string&gt;
   &lt;string&gt;통신&lt;/string&gt;
-  &lt;string&gt;소방전기&lt;/string&gt;
   &lt;string&gt;기타&lt;/string&gt;
+  &lt;string&gt;소방&lt;/string&gt;
+  &lt;string&gt;관급자재&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
     <Setting Name="register_status" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;string&gt;승인&lt;/string&gt;
-  &lt;string&gt;조건부승인&lt;/string&gt;
-  &lt;string&gt;반려&lt;/string&gt;
-  &lt;string&gt;정보용&lt;/string&gt;
+  &lt;string&gt;승인용&lt;/string&gt;
+  &lt;string&gt;공사용&lt;/string&gt;
+  &lt;string&gt;최종용&lt;/string&gt;
+  &lt;string&gt;참고용&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
     <Setting Name="register_type" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;string&gt;PMIS 자료분류&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공정 &amp;gt; 공정승인 첨부서류&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공정 &amp;gt; 공정승인 첨부서류 &amp;gt; 개산급 관리대장&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공정 &amp;gt; 공정승인 첨부서류 &amp;gt; 건축 - 공정승인 첨부서류&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공정 &amp;gt; 공정승인 첨부서류 &amp;gt; 기계 - 공정승인 첨부서류&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공정 &amp;gt; 공정승인 첨부서류 &amp;gt; 소방기계 - 공정승인 첨부서류&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공정 &amp;gt; 공정승인 첨부서류 &amp;gt; 소방전기 - 공정승인 첨부서류&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공정 &amp;gt; 공정승인 첨부서류 &amp;gt; 전기 - 공정승인 첨부서류&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공정 &amp;gt; 공정승인 첨부서류 &amp;gt; 통신 - 공정승인 첨부서류&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공정 &amp;gt; 보고서 &amp;gt; 공정현황보고&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공정 &amp;gt; 보고서 &amp;gt; 공정현황보고 &amp;gt; 월간공정보고&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공정 &amp;gt; 보고서 &amp;gt; 공정현황보고 &amp;gt; 주간공정보고&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Online 문서관리 &amp;gt; 서신문서 &amp;gt; 공문&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Online 문서관리 &amp;gt; 서신문서 &amp;gt; 공문 &amp;gt; 공조장비설치공사&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Online 문서관리 &amp;gt; 서신문서 &amp;gt; 공문 &amp;gt; 시험&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Online 문서관리 &amp;gt; 서신문서 &amp;gt; 공문 &amp;gt; 에어컨 설치공사&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Online 문서관리 &amp;gt; 서신문서 &amp;gt; 기타 (E-Mail 등)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Online 문서관리 &amp;gt; 서신문서 &amp;gt; 부적합 사항 보고서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Online 문서관리 &amp;gt; 서신문서 &amp;gt; 부적합 사항 보고서 &amp;gt; 부적합 사항 조치결과&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Online 문서관리 &amp;gt; 서신문서 &amp;gt; 부적합 사항 보고서 &amp;gt; 부적합 사항 최종확인&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Online 문서관리 &amp;gt; 서신문서 &amp;gt; 안전 부적합 사항 보고서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Online 문서관리 &amp;gt; 서신문서 &amp;gt; 안전 부적합 사항 보고서 &amp;gt; 안전 부적합 사항 조치결과&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Online 문서관리 &amp;gt; 서신문서 &amp;gt; 안전 부적합 사항 보고서 &amp;gt; 안전 부적합 사항 최종확인&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Online 문서관리 &amp;gt; 서신문서 &amp;gt; 작업지시서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Online 문서관리 &amp;gt; 서신문서 &amp;gt; 회의록&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Online 문서관리 &amp;gt; 시공문서 &amp;gt; 검측요청서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Online 문서관리 &amp;gt; 시공문서 &amp;gt; 결함 통보서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Online 문서관리 &amp;gt; 시공문서 &amp;gt; 안전 시정 지시서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Transmittal (계약업체)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; Transmittal (시공사)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; 문서 발신 (지시서)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; 문서 발신 (지시서) &amp;gt; 지시서 - 발신&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; 문서 발신 (회의록) &amp;gt; 회의록 - 발신&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; 보고서 &amp;gt; 기타보고서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; 인허가&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; 인허가 &amp;gt; 기타 - 인허가&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 공통 &amp;gt; 인허가 &amp;gt; 착공계서류&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; MP단계 &amp;gt; 보고서 - MP단계&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; Shop Dwg (시공사)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; Shop Dwg (시공사) &amp;gt; 도면 - Shop Dwg (시공사)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; Shop Dwg (시공사) &amp;gt; 도면 - Shop Dwg (시공사) &amp;gt; 기계 - Shop Dwg (시공사)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 계약도면(입찰도면)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 계약도면(입찰도면) &amp;gt; 계산서 - 계약도면(입찰도면)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 계약도면(입찰도면) &amp;gt; 도면 - 계약도면(입찰도면)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 계약도면(입찰도면) &amp;gt; 시방서 - 계약도면(입찰도면)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 계획설계 &amp;gt; 보고서 - 계획설계&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 기본설계 &amp;gt; 보고서 - 기본설계&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 설계변경도면/도서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 설계변경도면/도서 &amp;gt; 도면 - 설계변경도면/도서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 설계변경도면/도서 &amp;gt; 도면 - 설계변경도면/도서 &amp;gt; 건축 - 설계변경도면/도서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 설계변경도면/도서 &amp;gt; 도면 - 설계변경도면/도서 &amp;gt; 인테리어-설계변경도면/도서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 설계변경도면/도서 &amp;gt; 도면 - 설계변경도면/도서 &amp;gt; 전기 - 설계변경도면/도서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 설계변경도면/도서 &amp;gt; 도면 - 설계변경도면/도서 &amp;gt; 조경 - 설계변경도면/도서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 설계변경도면/도서 &amp;gt; 입주사요청사항&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 실시설계&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 실시설계 &amp;gt; 계산서 - 실시설계&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 실시설계 &amp;gt; 도면 - 실시설계&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 실시설계 &amp;gt; 시방서 - 실시설계&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 인테리어단계 &amp;gt; 기본/기획설계&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 설계 &amp;gt; 인테리어단계 &amp;gt; 실시설계&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 안전/환경 &amp;gt; 계획 &amp;gt; 안전관리계획서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 안전/환경 &amp;gt; 기타 &amp;gt; 안전점검일지&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 안전/환경 &amp;gt; 기타 &amp;gt; 위험성평가&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 안전/환경 &amp;gt; 보고서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 안전/환경 &amp;gt; 보고서 &amp;gt; 사고 보고서(산재)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 안전/환경 &amp;gt; 안전 부적합사항 &amp;gt; 안전 부적합 사항 보고서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 품질 &amp;gt; 계획 &amp;gt; 공종별 검사 계획서(ITP&amp;amp;ITC)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 품질 &amp;gt; 계획 &amp;gt; 품질 관리 계획서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 품질 &amp;gt; 부적합사항 &amp;gt; 부적합 사항 보고서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 품질 &amp;gt; 시공계획서(KOM) &amp;gt; 시공계획서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 품질 &amp;gt; 시공계획서(PCM)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 품질 &amp;gt; 시공계획서(PCM) &amp;gt; 건축 - 시공계획서(PCM)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 품질 &amp;gt; 시공계획서(PCM) &amp;gt; 기계 - 시공계획서(PCM)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 품질 &amp;gt; 시공계획서(PCM) &amp;gt; 소방기계 - 시공계획서(PCM)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 품질 &amp;gt; 시공계획서(PCM) &amp;gt; 소방전기 - 시공계획서(PCM)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 품질 &amp;gt; 시공계획서(PCM) &amp;gt; 전기 - 시공계획서(PCM)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 품질 &amp;gt; 시공계획서(PCM) &amp;gt; 조경 - 시공계획서(PCM)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 품질 &amp;gt; 자재/장비 공급승인서 (DP2)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 품질 &amp;gt; 자재/장비 공급승인서 (DP2) &amp;gt; 건축 - 자재/장비 공급승인서 (DP2)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 품질 &amp;gt; 자재/장비 공급승인서 (DP2) &amp;gt; 기계 - 자재/장비 공급승인서 (DP2)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 품질 &amp;gt; 자재/장비 공급승인서 (DP2) &amp;gt; 전기 - 자재/장비 공급승인서 (DP2)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 문서분류체계 &amp;gt; 품질 &amp;gt; 자재/장비 공급승인서 (DP2) &amp;gt; 조경 - 자재/장비 공급승인서 (DP2)&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 시공관리&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 시공관리 &amp;gt; 감리업무관리 &amp;gt; 감리업무일지 &amp;gt; 배관공사&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 시공관리 &amp;gt; 감리업무관리 &amp;gt; 감리업무일지 &amp;gt; 배선공사&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 시공관리 &amp;gt; 감리업무관리 &amp;gt; 감리업무일지 &amp;gt; 분야별감리업무일지&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 시공관리 &amp;gt; 감리업무관리 &amp;gt; 감리업무일지 &amp;gt; 시험&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 시공관리 &amp;gt; 감리업무관리 &amp;gt; 감리업무일지 &amp;gt; 책임감리업무일지&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 시공관리 &amp;gt; 감리업무관리 &amp;gt; 감리월간보고&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 시공관리 &amp;gt; 시공보고관리 &amp;gt; 월간업무보고&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 시공관리 &amp;gt; 시공보고관리 &amp;gt; 작업일보&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 시공관리 &amp;gt; 시공보고관리 &amp;gt; 주간업무보고&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 시공관리 &amp;gt; 시공보고관리 &amp;gt; 주간업무보고 &amp;gt; 배관공사&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 시공관리 &amp;gt; 입주사협의 &amp;gt; 회의자료&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 전자도서관리 &amp;gt; 사업일반 &amp;gt; 사업계획&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 품질/안전/ 환경관리 &amp;gt; 품질관리 &amp;gt; 자재검수요청서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 품질/안전/ 환경관리 &amp;gt; 품질관리 &amp;gt; 자재검수요청서 &amp;gt; 건축 - 자재검수요청서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 품질/안전/ 환경관리 &amp;gt; 품질관리 &amp;gt; 자재검수요청서 &amp;gt; 기계 - 자재검수요청서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 품질/안전/ 환경관리 &amp;gt; 품질관리 &amp;gt; 자재검수요청서 &amp;gt; 전기 - 자재검수요청서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 품질/안전/ 환경관리 &amp;gt; 품질관리 &amp;gt; 자재검수요청서 &amp;gt; 조경 - 자재검수요청서&lt;/string&gt;
-  &lt;string&gt;PMIS 자료분류 &amp;gt; 시공자료분류 &amp;gt; 품질/안전/ 환경관리 &amp;gt; 품질관리 &amp;gt; 현장통합점검일지&lt;/string&gt;
-  &lt;string&gt;보안문서분류체계 &amp;gt; 보고서&lt;/string&gt;
-  &lt;string&gt;보안문서분류체계 &amp;gt; 보고서 &amp;gt; 입주사 월간보고서&lt;/string&gt;
-  &lt;string&gt;보안문서분류체계 &amp;gt; 원가&lt;/string&gt;
-  &lt;string&gt;보안문서분류체계 &amp;gt; 원가 &amp;gt; 기성 &amp;gt; 공사기성부분 검사원&lt;/string&gt;
-  &lt;string&gt;보안문서분류체계 &amp;gt; 원가 &amp;gt; 기성 &amp;gt; 공사비 - 기성&lt;/string&gt;
-  &lt;string&gt;보안문서분류체계 &amp;gt; 원가 &amp;gt; 기성 &amp;gt; 용역비 - 기성&lt;/string&gt;
-  &lt;string&gt;보안문서분류체계 &amp;gt; 원가 &amp;gt; 변경/정산 &amp;gt; 공사비 - 변경/정산&lt;/string&gt;
-  &lt;string&gt;보안문서분류체계 &amp;gt; 원가 &amp;gt; 변경/정산 &amp;gt; 기타 - 변경/정산&lt;/string&gt;
-  &lt;string&gt;보안문서분류체계 &amp;gt; 정보보안 &amp;gt; 인원보안지침 &amp;gt; 비밀유지 서약서(외부업체 및 대표자)&lt;/string&gt;
+  &lt;string&gt;공문서 &amp;gt; 문서송부전&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; co-operation &amp;gt; 공문서관리 &amp;gt; CM-설계 &amp;gt; CM&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; co-operation &amp;gt; 공문서관리 &amp;gt; CM-시공 &amp;gt; CM&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; co-operation &amp;gt; 공문서관리 &amp;gt; CM-시공 &amp;gt; 시공&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; co-operation &amp;gt; 공문서관리 &amp;gt; 가설공사&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; co-operation &amp;gt; 공문서관리 &amp;gt; 발주처-CM &amp;gt; CM&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; co-operation &amp;gt; 공문서관리 &amp;gt; 발주처-CM &amp;gt; 가설건물공사&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; co-operation &amp;gt; 공문서관리 &amp;gt; 발주처-CM &amp;gt; 발주처&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; co-operation &amp;gt; 공문서관리 &amp;gt; 발주처-CM &amp;gt; 전력비&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; co-operation &amp;gt; 공문서관리 &amp;gt; 발주처-CM &amp;gt; 준공도서작성비&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; co-operation &amp;gt; 공문서관리 &amp;gt; 발주처-CM &amp;gt; 지급자재현장관리비&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; co-operation &amp;gt; 회의자료&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 사업비/계약 &amp;gt; 기성자료실&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 설계관리 &amp;gt; VE자료실&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 설계관리 &amp;gt; 도면 &amp;gt; 기본도면/도서&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 설계관리 &amp;gt; 도면 &amp;gt; 시공도면/도서&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 설계관리 &amp;gt; 설계보고 &amp;gt; 설계단계 CM 월간보고&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 설계관리 &amp;gt; 설계보고 &amp;gt; 설계단계 CM 일일보고&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 설계관리 &amp;gt; 설계보고 &amp;gt; 설계단계 CM 주간보고&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 시공관리 &amp;gt; 감리/CM일지&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 시공관리 &amp;gt; 감리월간보고&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 시공관리 &amp;gt; 감리주간보고&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 시공관리 &amp;gt; 시공월간보고&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 시공관리 &amp;gt; 시공일일보고&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 품질/안전/환경 &amp;gt; Material Inspection &amp;gt; 검수요청서&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 품질/안전/환경 &amp;gt; Material Inspection &amp;gt; 검측요청서&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 품질/안전/환경 &amp;gt; 안전관리 &amp;gt; 안전 관리 계획&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 품질/안전/환경 &amp;gt; 안전관리 &amp;gt; 안전자료실&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 품질/안전/환경 &amp;gt; 품질관리 &amp;gt; 품질관리계획&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 품질/안전/환경 &amp;gt; 품질관리 &amp;gt; 품질자료실&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 품질/안전/환경 &amp;gt; 환경관리 &amp;gt; 콘텐츠 관리 계약 문서&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 품질/안전/환경 &amp;gt; 환경관리 &amp;gt; 폐기물 관리&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 품질/안전/환경 &amp;gt; 환경관리 &amp;gt; 환경 관리 계획&lt;/string&gt;
+  &lt;string&gt;문서 및 도면 &amp;gt; 품질/안전/환경 &amp;gt; 환경관리 &amp;gt; 환경자료실&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
     <Setting Name="register_folder_uri" Type="System.String" Scope="User">
