added profiling! now is possible to switch settings using the same application! Multi project archive accomplished!

--- a/App.config
+++ b/App.config
@@ -107,6 +107,9 @@
       <setting name="picture_folder_uri" serializeAs="String">
         <value>pictures</value>
       </setting>
+      <setting name="current_profile" serializeAs="String">
+        <value>default</value>
+      </setting>
     </pmis.Properties.Settings>
     <archive2.Properties.Settings>
       <setting name="Setting" serializeAs="String">
