--- a/packages.config
+++ b/packages.config
@@ -3,4 +3,5 @@
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net452" />
+  <package id="YamlDotNet.Signed" version="4.2.2" targetFramework="net452" />
 </packages>
